AS & LK implement router section of settings using json object

--- a/app/css/dashboard-style.css
+++ b/app/css/dashboard-style.css
@@ -71,10 +71,13 @@ small {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.editable form {
+.editable form, .selector form {
   display: inline;
 }
 
+.editable, .selector {
+  text-decoration: underline;
+}
 
 .icon {
   height: 44px;
