AS add close button and implement a 'reverse title' approach

--- a/app/css/dashboard-style.css
+++ b/app/css/dashboard-style.css
@@ -48,6 +48,10 @@ body {
   background-size: 320px auto, 320px auto, auto;
 }
 
+body p {
+  font-size: 17px;
+}
+
 body, h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
 }
