--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -183,11 +183,17 @@ small {
 .status {
   color: rgba(255, 255, 255, 0.6);
 }
-.on .status .on, .connected {
+
+.status .on.on-button, .connected {
   color: #8bc53f;
 }
-.off .status .off, .disconnected {
+
+.status .off.off-button, .disconnected {
   color: #f3bf20;
+}
+
+.status .on.off-button, .status .off.on-button {
+  color: rgba(255, 255, 255, 0.6);
 }
 
 footer {
