JR & LK - user can toggle private wifi and openwireless on/off - refreshes pag & submits request, not yet implemented on backend

--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -198,6 +198,10 @@ small {
   color: #8bc53f;
 }
 
+.toggle:hover{
+  cursor: pointer;
+}
+
 .status .off.off-button, .disconnected {
   color: #f3bf20;
 }
