--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -75,6 +75,9 @@ small {
   color: rgba(255, 255, 255, 0.6);
 }
 
+#checkForUpdate:hover {
+  cursor: pointer;
+}
 
 .inputError{
   text-decoration: none;
