--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -40,7 +40,9 @@ body {
   font-size: 14px;
   color: white;
   background-image: url("../images/city-tile.png"), url("../images/stars.png"), -webkit-gradient(linear, left bottom, left top, from(#0084af), to(#0c152a));
+  background-image: url("../images/city-tile.png"), url("../images/stars.png"), -moz-gradient(linear, left bottom, left top, from(#0084af), to(#0c152a));
   background-image: url("../images/city-tile.png"), url("../images/stars.png"), -webkit-linear-gradient(bottom, #0084af, #0c152a);
+  background-image: url("../images/city-tile.png"), url("../images/stars.png"), -moz-linear-gradient(bottom, #0084af, #0c152a);
   background-image: url("../images/city-tile.png"), url("../images/stars.png"), linear-gradient(bottom, #0084af, #0c152a);
   background-position: center bottom, center top;
   background-repeat: repeat-x;
