Remove changeNetworkPassword and changeSSID.
Update links and wording on settings page.

--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -1,7 +1,7 @@
         <br>
         <br>
         <h4>Router</h4>
-        <p><a href="./changePassword.html">Change Router Credentials - admin password &gt;</a></p>
+        <p><a href="./changePassword.html">Change administrator password&gt;</a></p>
         <p>Software Version: {{softwareVersion}}</p>
         <p>Date of version update: {{softwareVersionUpdateDate}}</p>
         <p>Date last checked for update: {{lastCheckedDate}}</p>
@@ -17,8 +17,7 @@
         <br>
 
         <h4>Private Wifi</h4>
-        <p><a href="./changeSSID.html">Set network SSID &gt;</a></p>
-        <p><a href="./changeNetworkPassword.html">Set network password &gt;</a></p>
+        <p><a href="./setSSID.html">Set network SSID and passphrase&gt;</a></p>
         <br>
         <h4>Choose band</h4>
         <p><span class="selector"><select id="routerBand">RouterBand</select></span> ghz</p>
