--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -1,6 +1,6 @@
         <br>
         <br>
-        <h4>Router</h4>
+        <h6>Router</h6>
         <p><a href="./changePassword.html">Change administrator password&gt;</a></p>
         <p>Software Version: {{softwareVersion}}</p>
         <p>Date of version update: {{softwareVersionUpdateDate}}</p>
@@ -9,14 +9,25 @@
         <br>
         <br>
 
-        <h4>ISP Speeds</h4>
-        <p>*This helps us optimize your router.</p>
+        <h4>Estimated ISP Speed to optimize performance</h4>
         <p>ISP Download Speed: <span id="ispDownloadSpeed" class="editable">{{ispDownloadSpeed}}</span> mb/s</p>
         <p>ISP Upload Speed: <span id="ispUploadSpeed" class="editable">{{ispUploadSpeed}}</span> mb/s</p>
         <br>
         <br>
 
-        <h4>Private Wifi</h4>
+        <h4>Transfer Protocol type for admin Web-UI</h4>
+        <p><span class="selector"><select id="transferProtocol">TransferProtocol</select></span></p>
+        <br>
+        <br>
+
+        <h4>SSH Keys</h4>
+        <p id="SSH">Upload your ssh keys for command line access</p>
+        <br>
+        <br>
+        <br>
+
+
+        <h6>Private Wifi</h6>
         <p><a href="./setSSID.html">Set network SSID and passphrase&gt;</a></p>
         <br>
         <h4>Choose band</h4>
@@ -32,9 +43,9 @@
         <br>
 
 
-        <h4>Open Wireless</h4>
-        <p>Real min time bandwidth <span class="editable" id="openwirelessBandwidth">{{openwirelessBandwidth}}</span>%</p>
-        <p>*I'm willing to tolerate up to 15% degradation in internet speeds so that I can contribute to openwireless</p>
+
+        <h6>Open Wireless</h6>
+        <p>Max bandwidth fraction<span class="editable" id="openwirelessBandwidth">{{openwirelessBandwidth}}</span>%</p>
         <br>
         <p>Maximum total data/month <span class="editable" id="openwirelessData">{{openwirelessData}}</span> ghz</p>
         <p><a href="#">Reset total data used this month &gt;</a></p>
@@ -43,28 +54,13 @@
         <h4>Choose band</h4>
         <p><span class="selector"><select id="openwirelessBand">OpenwirelessBand</select></span> ghz</p>
         <p>Channel <span class="selector"><select id="openwirelessChannel">OpenwirelessChannel</select></span> ghz</p>
-        <p>Channel bandwidth <span class="selector"><select id="openwirelessChannelBandwidth">OpenwirelessChannelBandwidth</select></span> ghz</p>
-        <br>
-        <h4>Encryption</h4>
-        <p><span class="selector"><select id="openwirelessEncryption">OpenwirelessEncryption</select></span></p>
+        <p>Channel bandwidth <span class="selector"><select id="openwirelessChannelBandwidth">OpenwirelessChannelBandwidth</select></span> GB</p>
         <br>
 
-        <h4>Transfer Protocol</h4>
-        <p><span class="selector"><select id="transferProtocol">TransferProtocol</select></span></p>
+        <h4>Openwireless over the air encryption</h4>
+        <p><span class="selector"><select id="openwirelessEncryption">OpenwirelessEncryption</select></span></p>
         <br>
 
         <h4>VPN/TOR Configuration</h4>
         <p><span class="selector"><select id="openwirelessVpnConfiguration">OpenwirelessVpnConfiguration</select></span></p>
-        <br>
-        <br>
 
-        <h4>IP Info</h4>
-        <p>WAN IP: {{wanIp}}</p>
-        <p>LAN IP: {{lanIp}}</p>
-        <br>
-        <br>
-
-        <h4>SSH Keys</h4>
-        <p id="SSH">Upload your ssh keys for command line access</p>
-        <br>
-        <br>
