Use better input box for SSH key.
Also remove transport security dropdown.

--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -276,3 +276,10 @@ footer img {
 #restartSuccess {
   display: none;
 }
+#enterSshKey {
+  display: none;
+}
+#input-SSH {
+  width: 100%;
+  height: 11em;
+}
