--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -45,12 +45,8 @@
         <p>Channel <span class="selector"><select id="openwirelessChannel">OpenwirelessChannel</select></span> ghz</p>
         <p>Channel bandwidth <span class="selector"><select id="openwirelessChannelBandwidth">OpenwirelessChannelBandwidth</select></span> ghz</p>
         <br>
-        <h4>Encryption</h4>
+        <h4>WiFi security</h4>
         <p><span class="selector"><select id="openwirelessEncryption">OpenwirelessEncryption</select></span></p>
-        <br>
-
-        <h4>Transfer Protocol</h4>
-        <p><span class="selector"><select id="transferProtocol">TransferProtocol</select></span></p>
         <br>
 
         <h4>VPN/TOR Configuration</h4>
@@ -65,6 +61,10 @@
         <br>
 
         <h4>SSH Keys</h4>
-        <p id="SSH">Upload your ssh keys for command line access</p>
+        <a id="SSH">Upload your ssh keys for command line access</a>
+        <div id="enterSshKey">
+          <textarea id='input-SSH'/></textarea><br>
+          <button id='submit-SSH'>Submit</button>
+        </div>
         <br>
         <br>
