--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -51,9 +51,14 @@
 
         <h2>Open Wireless</h2>
         <div class="section">
-          <p>Max bandwidth fraction<span class="editable" id="openwirelessBandwidth">{{openwirelessBandwidth}}</span>%</p>
-          <br>
-          <p>Max total data per month <span class="editable" id="openwirelessData">{{openwirelessData}}</span> GHz</p>
+          <p>
+            <label for=openwirelessBandwidth>Max bandwidth fraction</label>
+            <span class="editable" id="openwirelessBandwidth">{{openwirelessBandwidth}}</span>%
+          </p>
+          <p>
+            <label for="openwirelessData">Max total data per month</label>
+            <span class="editable" id="openwirelessData">{{openwirelessData}}</span> MB
+          </p>
           <p><a href="#">Reset total data used this month</a></p>
           <p>Change data auto-reset date [Datepicker]</p>
           <p>
