--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -7,7 +7,7 @@
           </div>
         </header>
         <div class="title">
-          <h2>{{name}}</h2>
+          <h2>{{name}}{{#if ssid}} ({{ssid}}){{/if}}</h2>
           {{#if pingSpeed}} 
             <div class="ping">{{pingSpeed}}<small> {{pingSpeedMetric}} ping</small></div>
           {{/if}}
