Capitalize F in WiFi

--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -21,7 +21,7 @@
           <p>ISP Upload Speed: <span id="ispUploadSpeed" class="editable">{{ispUploadSpeed}}</span> Mb/s</p>
         </div>
 
-        <h2>Private Wifi</h2>
+        <h2>Private WiFi</h2>
         <div class="section">
           <label for=routerSsid>SSID</label>
           <span>{{routerSsid}}</span>
