--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -1,10 +1,10 @@
         <h2>Administration</h2>
         <div class="section">
           <p>
-            <a href="./changePassword.html">Change admin password</a>
+            <a href="./changePassword.html" class="links">Change admin password</a>
           </p>
           <p id="SSH">
-            <a>Add or edit SSH keys</a>
+            <a class="links">Add or edit SSH keys</a>
           </p>
           <div id="enterSshKey">
             <textarea id='input-SSH'/></textarea><br>
@@ -25,7 +25,7 @@
         <div class="section">
           <label for=routerSsid>SSID</label>
           <span>{{routerSsid}}</span>
-          <p><a href="./setSSID.html">Set network SSID and passphrase</a></p>
+          <p><a href="./setSSID.html" class="links">Set network SSID and passphrase</a></p>
           <br>
           <p>
             <label for="routerBand">Frequency</label>
@@ -55,7 +55,7 @@
             <label for="openwirelessData">Max total data per month</label>
             <span class="editable" id="openwirelessData">{{openwirelessData}}</span> MB
           </p>
-          <p><a href="#">Reset total data used this month</a></p>
+          <p><a href="#" class="links">Reset total data used this month</a></p>
           <p>Change data auto-reset date [Datepicker]</p>
           <p>
             <label for="openwirelessBand">Choose band</label>
