Edit SSH key UI.
Add Javascript and template for setting SSH keys.
Modify backend to accomodate frontend needs.
Now ssh_key_info is returned as part of the main settings data request.

--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -53,7 +53,7 @@ header, .network, footer {
   margin: 0;
 }
 
-a, #SSH {
+a {
   text-decoration: underline;
   color: white;
 }
@@ -290,6 +290,7 @@ footer img {
 }
 #enterSshKey {
   display: none;
+  padding: 1em;
 }
 #input-SSH {
   width: 100%;
