Simplify prompt to edit SSID.

--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -43,7 +43,7 @@
         <div class="section">
           <label for=routerSsid>SSID</label>
           <span>{{routerSsid}}</span>
-          <p><a href="./setSSID.html" class="links">Set network SSID and passphrase</a></p>
+          <a href="./setSSID.html" class="links">Edit</a>
           <br>
           <p>
             <label for="routerBand">Frequency</label>
