--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -28,7 +28,7 @@
         {{/if}}
 
         {{#if state }}
-        <div class="status toggle" id="{{stateId}}"><span class="{{state}} on-button">On</span> | <span class="{{state}} off-button">Off</span></div>
+        <div class="status toggle" id="{{stateId}}"><span class="on-button {{state}}">On</span> | <span class="off-button {{state}}">Off</span></div>
         {{/if}}
 
       </div>
