LK pad last checked for updates line to appear above city skyline

--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -17,6 +17,10 @@ header, .network, footer {
   align-items: center;
 }
 
+footer { 
+  margin-bottom: 90px;
+}
+
 .ips {
   display: -webkit-box;
   display: -webkit-flex;
