Change ping target to eff.org

--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -9,7 +9,7 @@
         <div class="title">
           <h2>{{name}}{{#if ssid}} ({{ssid}}){{/if}}</h2>
           {{#if pingSpeed}} 
-            <div class="ping">{{pingSpeed}}<small> {{pingSpeedMetric}} ping to google.com</small></div>
+            <div class="ping">{{pingSpeed}}<small> {{pingSpeedMetric}} ping to eff.org</small></div>
           {{/if}}
           {{#if devices}}
             <div class="devices"><span class="device-count">{{devices}}</span><small> devices</small></div>
