Settings page tweaks

--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -32,9 +32,8 @@
           <p>Date of version update: {{softwareVersionUpdateDate}}</p>
         </div>
 
-        <h2>ISP Speeds</h2>
+        <h2>ISP Speeds &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Set these to help optimize your router </h2>
         <div class="section">
-          <p>Set these to help optimize your router.</p>
           <p>ISP Download Speed: <span class="setting" ><span id="ispDownloadSpeed" class="editable">{{ispDownloadSpeed}}</span> Mb/s </span></p>
           <p>ISP Upload Speed: <span class="setting" ><span id="ispUploadSpeed" class="editable">{{ispUploadSpeed}}</span> Mb/s </span></p>
         </div>
@@ -46,7 +45,7 @@
           <a href="./setSSID.html" class="links">Edit</a>
           <br>
           <p>
-            <label for="routerBand">Frequency</label>
+            <label for="routerBand">Frequency Band</label>
             <span class="selector"><select class="setting" id="routerBand">RouterBand</select></span>
           </p>
           <p>
@@ -75,8 +74,9 @@
           </span></p>
           <p><a href="#" class="links">Reset total data used this month</a></p>
           <p>Change data auto-reset date [Datepicker]</p>
+	  <br>
           <p>
-            <label for="openwirelessBand">Choose band</label>
+            <label for="openwirelessBand">Frequency Band</label>
             <select class="setting" id="openwirelessBand">OpenwirelessBand</select>
           </p>
           <p>
