--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -27,16 +27,16 @@
               </div>
             {{/sshKey}}
           </p>
-          <p>Software Version:<span class="subheading"> {{softwareVersion}}</span></p>
-          <p>Date of version update:<span class="subheading"> {{softwareVersionUpdateDate}}</span></p>
+          <p>Software Version <span class="subheading"> {{softwareVersion}}</span></p>
+          <p>Date of version update <span class="subheading"> {{softwareVersionUpdateDate}}</span></p>
         </div>
 
         <h2>ISP Speeds 
           <span class="subheading">Set these to help optimize your router</span>
         </h2>
         <div class="section">
-          <p>ISP Download Speed: <span class="setting" ><span id="ispDownloadSpeed" class="editable">{{ispDownloadSpeed}}</span> Mb/s </span></p>
-          <p>ISP Upload Speed: <span class="setting" ><span id="ispUploadSpeed" class="editable">{{ispUploadSpeed}}</span> Mb/s </span></p>
+          <p>ISP Download Speed <span class="setting" ><span id="ispDownloadSpeed" class="editable">{{ispDownloadSpeed}}</span> Mb/s </span></p>
+          <p>ISP Upload Speed <span class="setting" ><span id="ispUploadSpeed" class="editable">{{ispUploadSpeed}}</span> Mb/s </span></p>
         </div>
 
         <h2>Private WiFi
